# ClassiCube

./: .gitattributes  .gitignore  C-client-notes.md  C-guidelines.md  Camera.cs  ClassicalSharp-VS2008.sln  ClassicalSharp.csproj  ClassicalSharp.sln  FastBitmap.cs  FastColour.cs  Makefile  Map.cs  NullEntity.cs  OpenTK.dll.config  Program.cs  SECURITY.md  TextureAtlas1D.cs  TextureAtlas2D.cs  Utils.cs  cc-mac-arm64  credits.txt  launcher instructions.txt  license.txt  readme.md  readme.txt  todo.txt
2D/: DrawTextArgs.cs  Texture.cs  Texture2D.cs  Utils2D.cs
Blocks/: Block.cs  BlockId.cs  BlockInfo.Biomes.cs  BlockInfo.Culling.cs  BlockInfo.Optimised.cs  BlockInfo.cs
ClassicalSharp/: ClassicalSharp.csproj  Program.cs  SharpWave.dll.config  app.config  credits.txt  known_bugs.txt  readme.md
Commands/: Command.cs  CommandManager.cs  CommandReader.cs  DefaultCommands.cs
DefaultPlugin/: DefaultCommands.cs  DefaultPlugin.cs  DefaultPlugin.csproj  EntityManager.cs  StandardChunkMeshBuilder.cs
Entities/: Entity.cs  EntityList.cs  EntityManager.cs  EntityMetadata.cs  LivingEntity.cs  LocalPlayer.cs  LocationUpdate.cs  ModelPart.cs  NetPlayer.cs  Particle.cs  ParticleManager.cs  Player.Rendering.cs  Player.cs  PlayerModel.cs
Game/: DxGame.cs  Game.Api.cs  Game.Chat.cs  Game.Events.cs  Game.InputHandling.cs  Game.cs  GlGame.cs  Inventory.cs
GraphicsAPI/: DefaultShaders.cs  DirectXApi.cs  Framebuffer.cs  IGraphicsApi.cs  ModernGLApi.cs  ModernOpenGLApi.cs  OpenGLApi.cs  PostProcessingShader.cs  PostProcessor.cs  Shader.cs  ShadowMap.cs  Texture.cs  TextureObject.cs  VertexFormats.cs
Injector/: EntityMetadata.cs  Injector.csproj  InjectorThread.Logging.cs  InjectorThread.cs  Program.cs  StreamInjector.cs  Utils.cs
InteropPatcher/: InteropPatcher.csproj  Patcher.cs  Program.cs  app.config
Ionic.Zlib/: Adler.cs  Crc32.cs  Deflate.cs  DeflateStream.cs  GZipStream.cs  InfTree.cs  Inflate.cs  Ionic.ZLib.csproj  LICENSE.jzlib.txt  License.zlib.txt  Tree.cs  Zlib.cs  ZlibBaseStream.cs  ZlibCodec.cs  ZlibConstants.cs  ZlibStream.cs
Items/: ItemId.cs  ItemsInfo.cs
Launcher/: ClassiCubeSession.cs  ClassicubeNetSession.cs  Comparers.cs  GameSession.cs  GameStartData.cs  Launcher.csproj  MainForm.Designer.cs  MainForm.GameState.cs  MainForm.cs  MainForm.resx  MinecraftSession.cs  Program.cs  ResourceFetcher.cs  SecureMethod.cs  ServerListEntry.cs  WebUtility.cs  app.config
Launcher2/: Client.cs  FastButtonWidget.cs  Game.cs  GameStartData.cs  Launcher.csproj  Launcher2.csproj  LauncherWindow.Background.cs  LauncherWindow.cs  MainScreen.cs  PlatformDrawer.cs  Program.cs  Secure.cs  WebTasks.cs
Map/: ChunkMeshBuilder.cs  ChunkMeshBuilderTex2Col4.cs  Map.cs
MeshBuilders/: ChunkMeshBuilder.ChunkReading.cs  ChunkMeshBuilder.cs  ChunkMeshBuilderTex2Col4.cs  JSON.cs
Model/: BlockModel.cs  ChickenModel.cs  CreeperModel.cs  IModel.cs  ModelCache.cs  ModelPart.cs  PigModel.cs  PlayerModel.cs  SheepModel.cs  SkeletonModel.cs  SpiderModel.cs  ZombieModel.cs
Network/: AsyncDownloader.cs  Enums.cs  FastNetReader.cs  FixedBufferStream.cs  GZipHeaderReader.cs  NetReader.cs  NetWriter.cs  NetworkProcessor.IO.cs  NetworkProcessor.cs  WomConfigHandler.cs
OpenTK/: BindingsBase.cs  Configuration.cs  Debug.cs  DisplayDevice.cs  DisplayResolution.cs  FrameEventArgs.cs  GameWindow.cs  GameWindowFlags.cs  IGameWindow.cs  INativeWindow.cs  Interop.cs  KeyPressEventArgs.cs  Keyboard.cs  MemUtils.cs  Mouse.cs  NativeWindow.cs  OpenTK.csproj  OpenTK.dll.config  Utils.cs  WindowBorder.cs  WindowState.cs
Physics/: BoundingBox.cs  Entity.Physics.cs  IntersectionUtils.cs  Picking.cs
Plugin/: Plugin.cs
Plugin_Beta173/: ConcurrentQueue.cs  DummyClasses.cs  PluginBeta173.csproj
ProfilingSessions/: Session20150405_103831.sdps
Rendering/: EntityRenderer.cs  EnvRenderer.cs  FrustumCulling.cs  LegacyEnvRenderer.cs  LegacyFastEnvRenderer.cs  LegacyMapEnvRenderer.cs  MapBordersRenderer.cs  MapEnvRenderer.cs  MapRenderer.cs  MinimalEnvRenderer.cs  NormalEnvRenderer.cs  NormalMapEnvRenderer.cs  PickingRenderer.cs  PlayerRenderer.cs  StandardEnvRenderer.cs  WeatherRenderer.cs
Selections/: SelectionBox.cs  SelectionBoxComparer.cs  SelectionManager.cs
SharpDX/: SharpDX.csproj
SharpWave/: ICodec.cs  IMediaContainer.cs  SharpWave.csproj  SharpWave.dll.config  VolumeMixer.cs
SoftwareEngine/: MainForm.Designer.cs  MainForm.cs  Program.cs  SoftwareEngine.csproj
Util/: ConcurrentQueue.cs  FastBitmap.cs  NibbleArray.cs  TextureAtlas2D.cs  Utils.cs  Vector2I.cs  Vector3I.cs
Utils/: Camera.cs  FastBitmap.cs  FastColour.cs  MinimalEnvRenderer.cs  TerrainAtlas1D.cs  TerrainAtlas2D.cs  TextureAtlas1D.cs  TextureAtlas2D.cs  TextureRectangle.cs  UnsafeString.cs  Utils.cs  Vector3I.cs
Window/: ChestWindow.cs  DispenserWindow.cs  FurnaceWindow.cs  InventoryWindow.cs  Slot.cs  Window.cs  WindowManager.cs  WorkbenchWindow.cs
World/: Chunk.cs  ChunkPartialUpdate.cs  Map.cs
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/classicube/: CCFileProvider.java  MainActivity.java  UIBackend.java  View3D.java
build-n64/: Animations.d  Audio.d  AxisLinesRenderer.d  Bitmap.d  Block.d  BlockPhysics.d  Builder.d  Camera.d  Chat.d  Commands.d  Deflate.d  Drawer.d  Drawer2D.d  Entity.d  EntityComponents.d  EntityRenderers.d  EnvRenderer.d  Event.d  ExtMath.d  Formats.d  Game.d  GameVersion.d  Generator.d  Graphics_3DS.d  Graphics_D3D11.d  Graphics_D3D9.d  Graphics_Dreamcast.d  Graphics_GCWii.d  Graphics_GL1.d  Graphics_GL2.d  Graphics_N64.d  Graphics_PS2.d  Graphics_PS3.d  Graphics_PSP.d  Graphics_PSVita.d  Graphics_SoftGPU.d  Graphics_Xbox.d  Graphics_Xbox360.d  Gui.d  HeldBlockRenderer.d  (+82 more)
doc/: compile-fixes.md  hosting-flask.md  hosting-webclient.md  menu-architecture.md  modules.md  options.md  style.md  (+6 more)
misc/android/app/: CMakeLists.txt  build.gradle
misc/android/app/src/main/: AndroidManifest.xml
misc/android/app/src/main/java/com/classicube/: CCFileProvider.java  CCMotionListener.java  CCView.java  MainActivity.java
(+2390 files in other folders)
